# craft_cloud

./: .gitattributes  .gitignore  CraftCloud.spec  main.py  pyproject.toml  requirements.txt  setup.iss
.github/workflows/: build.yml
config/: config.yaml
core/: auto_sync_manager.py  cache_manager.py  config_manager.py  database.py  db_manager.py  drag_service.py  media_utils.py  pkg_resources_stub.py  scheduler.py  sync_operation_strategy.py  task_manager.py  task_types.py  telegram_uploader.py  telethon_login.py  tg_client.py  tg_worker.py  translator.py  utils.py
docs/: index.html  readme-CH.md  readme.md
model/: data_models.py  directory_repository.py  file_repository.py  file_table_model.py  orm_models.py  shared_types.py  sync_status_repository.py  task_repository.py  user_repository.py
resources/i18n/: craft_cloud.de.qm  craft_cloud.de.ts  craft_cloud.fr.qm  craft_cloud.fr.ts  craft_cloud.ko.qm  craft_cloud.ko.ts  craft_cloud.ru.qm  craft_cloud.ru.ts  craft_cloud.zh_CN.qm  craft_cloud.zh_CN.ts
scripts/: build.sh  gen_i18n.py
services/: download_manager.py  file_manager.py  search_manager.py  sync_utils.py  telegram_operations.py  upload_manager.py  whoosh_search.py
services/sync/: __init__.py  (+6 more)
tests/: conftest.py  test_config.py
view/: about_page.py  breadcrumb_widget.py  custom_dialogs.py  drag_service.py  file_icon.py  file_table.py  file_table_model.py  file_view_stack.py  highlight_delegate.py  home_page.py  icon_utils.py  login_window.py  main_window.py  preview_flyout.py  settings_page.py  sync_controller.py  sync_page.py  task_queue_page.py
(+1 files in other folders)
