[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "craft_cloud"
version = "2.7.7"
description = "CraftCloud — 将 Telegram 作为无限云存储的桌面客户端"
readme = "docs/readme.md"
license = {file = "docs/LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
]

dependencies = [
    "PySide6>=6.5.0",
    "PySide6-Fluent-Widgets[full]>=1.11.2",
    "Telethon>=1.36.0",
    "cryptg>=0.4.0",
    "numpy<2",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    "Pillow>=9.0.0",
    "whoosh>=2.7.0",
    "diskcache>=5.0.0",
    "jieba>=0.42.0",
    "qrcode[pil]>=7.4.0",
    "SQLAlchemy>=2.0.0",
]

[project.scripts]
craft-cloud = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "model", "view", "services"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-qt>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "APScheduler>=3.10.0",
]
